Fix for background image on Safari

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -21,6 +21,10 @@
   background-attachment: fixed
   background-size: cover
 
+@media (max-width: $tablet)
+  .hero.is-fullheight
+    background-attachment: scroll
+
 .navbar-item
   color: $white !important
   &:hover
